--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>Jago</title>
-<meta http-equiv="refresh" content="0; URL=https://home.jagosocial.tk/app" />
+<meta http-equiv="refresh" content="0; URL=https://home.jagosocial.tk/klina/app" />
 </head>
 <body>
 <p>Loading...</p>
